--- a/angular-frontend/angular.json
+++ b/angular-frontend/angular.json
@@ -125,6 +125,10 @@
               "devServerTarget": "nx-movies:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {}
         }
       }
     }
